[package]
name = "spdlog-telegram"
version = "0.1.0"
edition = "2024"
description = "Sends logs to Telegram, based on spdlog-rs"
repository = "https://github.com/SpriteOvO/spdlog-telegram"
license = "MIT OR Apache-2.0"
keywords = ["spdlog", "log", "logging", "telegram"]
categories = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
atomic = "0.5.3"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde_json = "1.0.145"
spdlog-rs = "0.5.1"
thiserror = "2.0.17"
url = "2.5.7"

[dev-dependencies]
mockito = "1.7.0"
